--- a/requirements.txt
+++ b/requirements.txt
@@ -5,6 +5,8 @@ flake8==7.0.0
 iniconfig==2.0.0
 mccabe==0.7.0
 mypy-extensions==1.0.0
+numpy==1.26.4
+opencv-python==4.9.0.80
 packaging==24.0
 pathspec==0.12.1
 platformdirs==4.2.0
