--- a/requirements.txt
+++ b/requirements.txt
@@ -15,5 +15,6 @@ pycodestyle==2.11.1
 pyflakes==3.2.0
 PyGObject==3.48.1
 pytest==8.1.1
+python-dotenv==1.0.1
 tomli==2.0.1
 typing_extensions==4.11.0
