--- a/.github/workflows/python-app.yml
+++ b/.github/workflows/python-app.yml
@@ -32,7 +32,7 @@ jobs:
       run: |
         # stop the build if there are Python syntax errors or undefined names
         flake8 . --count --select=E9,F63,F7,F82 --show-source --statistics
-        flake8 . --count --max-complexity=10 --max-line-length=120 --statistics --ignore=E402,W503
+        flake8 . --count --max-line-length=120 --statistics --ignore=E402,W503
     - name: Check code with black
       run: |
         black --check .
