--- a/.github/workflows/python-app.yml
+++ b/.github/workflows/python-app.yml
@@ -35,4 +35,4 @@ jobs:
         flake8 . --count --max-line-length=120 --statistics --ignore=E402,W503
     - name: Check code with black
       run: |
-        black --check .
+        black --check . --line-length=120
